# stable.fun

./: readme.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.css  App.tsx  index.css  main.tsx
frontend/src/components/ui/: card.tsx  navbar.tsx  stablebond-creator.tsx  stablebond-table.tsx
frontend/src/plugins/: protobuf-patch.ts
frontend/src/scripts/: createStablebondToken.tsx  depositFiat.tsx  fetchStablebondTokens.tsx  redeemToken.tsx
frontend/src/utils/: anchor.tsx  stablefun-utils.tsx  wallet.tsx
stablefun/: .gitignore  Anchor.toml  package-lock.json
stablefun/programs/stablefun/: Cargo.toml
stablefun/programs/stablefun/src/: error.rs  lib.rs
stablefun/programs/stablefun/src/contexts/: create.rs  deposit.rs  init.rs  mod.rs  redeem.rs
stablefun/programs/stablefun/src/state/: create.rs  deposit.rs  init.rs  mod.rs
stablefun/tests/: stablefun.ts
