[package]
name = "stablefun"
version = "0.1.0"
description = "Stable.fun"
edition = "2021"
rust_version = "1.82"

[lib]
crate-type = ["cdylib", "lib"]
name = "stablefun"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = { version = "0.30.1", features = ["metadata"] }
anchor-metaplex = "0.8.3"
switchboard-solana = "0.30.4"
